# grpc-example

./: Dockerfile  LICENSE  README.md  pyproject.toml
app/: message_server.py
config/: example.proto  message.proto
tests/: test_hello.py  test_message.py
