[tool.poetry]
name = "grpc-example"
version = "0.1.0"
description = ""
authors = ["c2io <c2io@outlook.com>"]


[tool.poetry.dependencies]
python = "^3.9"
betterproto = {version = "^2b", extras = ["compiler"]}
grpcio-tools = "^1.38.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest = "^6.2.4"
flake8 = "^3.9.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi-private"  # This name will be used in the configuration to retreive the proper credentials
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
# timeout = 120
